<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/event_name" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/event_desctibtion" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/event_location" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startDate"
            style="?android:attr/spinnerStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/event_start_date"
            android:width="35dp" />

        <Button
            android:id="@+id/startHour"
            style="?android:attr/spinnerStyle"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/event_start_hour" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/endDate"
            style="?android:attr/spinnerStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/event_end_date"
            android:width="35dp" />

        <Button
            android:id="@+id/endHour"
            style="?android:attr/spinnerStyle"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/event_end_hour" />
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/submit" />

</LinearLayout>